--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,10 +16,10 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath('com.android.tools.build:gradle:3.4.1')
         classpath 'com.google.gms:google-services:4.2.0'
-        classpath 'com.google.firebase:perf-plugin:1.2.1'
-        classpath 'io.fabric.tools:gradle:1.28.1'
+        classpath 'com.google.firebase:perf-plugin:1.3.1'
+        classpath 'io.fabric.tools:gradle:1.31.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -27,12 +27,16 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         mavenLocal()
-        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
+            url("$rootDir/../node_modules/react-native/android")
         }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        google()
+        jcenter()
     }
 }
