--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'RNFirebaseStarter'
 include ':react-native-firebase'
 project(':react-native-firebase').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firebase/android')
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
